Fixed alignment

--- a/src/components/NavigationSideBar/index.module.css
+++ b/src/components/NavigationSideBar/index.module.css
@@ -12,7 +12,6 @@
 .navbar {
   background-color: #002037;
   justify-content: flex-start;
-  height: auto;
   width: 300px;
   gap: 42px;
 }
@@ -124,7 +123,8 @@
 }
 
 .logoutPosition {
-  margin-top: 18.4rem;
+  margin-top: 17rem;
+  margin-bottom: 1.4rem;
 }
 
 .alignContent {
